force-app/main/default/objects/NRV10Commission__c/NRV10Commission__c.object-meta.xml
<CustomObject>
    <description>Stocke tous les enregistrements des différentes commissions calculées par lignes de produit CPQ et avenants.
4 types de commissions possibles :
 - Commissions par vendeur calculées sur la base des produits des devis CPQ et avenants; et stockées par lignes produit
 - Commissions d&apos;équipes calculées sur la base des commissions vendeurs, en fonction des responsables d&apos;équipes (RV, RVJ, Remplaçants)
 - Commissions bonus calculées sur la base des performances des vendeurs
 - Commissions report calculées sur la base des régularisations des commissions</description>
    <label>Commission</label>
    <nameField>
        <displayFormat>COMM/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>