force-app/main/default/objects/NRV10Commission__c/fields/amendedCom__c.field-meta.xml
<CustomField>
    <fullName>amendedCom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[#] Avenant sur la commission</label>
    <referenceTo>NRV10Commission__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>