force-app/main/default/objects/NRV10Commission__c/fields/amountHT__c.field-meta.xml
<CustomField>
    <fullName>amountHT__c</fullName>
    <label>Montant HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>