force-app/main/default/objects/NRV10Commission__c/fields/calculationDate__c.field-meta.xml
<CustomField>
    <fullName>calculationDate__c</fullName>
    <label>Date de calcul</label>
    <type>Date</type>
</CustomField>