force-app/main/default/objects/NRV10Commission__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <formula>productCom__r.SBQQ__Product__r.reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>