force-app/main/default/objects/NRV10Commission__c/fields/commissionOfUser__c.field-meta.xml
<CustomField>
    <fullName>commissionOfUser__c</fullName>
    <formula>sfUser__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Ma commission</label>
    <type>Checkbox</type>
</CustomField>