force-app/main/default/objects/NRV10Commission__c/fields/comType__c.field-meta.xml
<CustomField>
    <fullName>comType__c</fullName>
    <label>Type de commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendeur</fullName>
            </value>
            <value>
                <fullName>Equipe</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Malus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>