force-app/main/default/objects/NRV10Commission__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande client</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>