force-app/main/default/objects/NRV10Commission__c/fields/customValue__c.field-meta.xml
<CustomField>
    <fullName>customValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs technique permettant de ne pas écraser un montant de malus modifié par un supérieur hirarchique dans le cadre des malus.</description>
    <label>Valeur personnalisée</label>
    <type>Checkbox</type>
</CustomField>