force-app/main/default/objects/NRV10Commission__c/fields/dimensions__c.field-meta.xml
<CustomField>
    <fullName>dimensions__c</fullName>
    <formula>IF (ISBLANK(quoteLineItem__c),
    quoteLine__r.dimensions__c,
    quoteLineItem__r.dimensions__c)</formula>
    <label>Dimensions</label>
    <type>Text</type>
</CustomField>