force-app/main/default/objects/NRV10Commission__c/fields/ec__c.field-meta.xml
<CustomField>
    <fullName>ec__c</fullName>
    <label>[#] Écart cotation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>