force-app/main/default/objects/NRV10Commission__c/fields/ecFormula__c.field-meta.xml
<CustomField>
    <fullName>ecFormula__c</fullName>
    <formula>IF(
ISBLANK(quoteCPQ__c),
(-1)*ec__c,
ec__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Écart cotation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>