force-app/main/default/objects/NRV10Commission__c/fields/ecPercent__c.field-meta.xml
<CustomField>
    <fullName>ecPercent__c</fullName>
    <label>[#] Écart cotation (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>