force-app/main/default/objects/NRV10Commission__c/fields/ecPercentFormula__c.field-meta.xml
<CustomField>
    <fullName>ecPercentFormula__c</fullName>
    <formula>IF(
ISBLANK(quoteCPQ__c),
(-1)*ecPercent__c,
ecPercent__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Écart cotation (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>