force-app/main/default/objects/NRV10Commission__c/fields/financingMethod__c.field-meta.xml
<CustomField>
    <fullName>financingMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moyen de financement</label>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>