force-app/main/default/objects/NRV10Commission__c/fields/financingMethodName__c.field-meta.xml
<CustomField>
    <fullName>financingMethodName__c</fullName>
    <description>Nom du moyen de financement (provient du nom du référentiel si la commission porte sur un devis CPQ, sinon provient de la picklist du devis sales)</description>
    <label>Mode de financement</label>
    <length>128</length>
    <type>Text</type>
</CustomField>