force-app/main/default/objects/NRV10Commission__c/fields/initialCPQQuote__c.field-meta.xml
<CustomField>
    <fullName>initialCPQQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ technique de lien vers le devis CPQ initial (utilisé pour remonter à la source lors d&apos;avenant multiples).
Renseigné si la commission porte sur un devis CPQ.</description>
    <label>[#] Devis CPQ initial</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Commissions ([#] Devis CPQ initial)</relationshipLabel>
    <relationshipName>Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>