force-app/main/default/objects/NRV10Commission__c/fields/initialCPQQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>initialCPQQuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ technique de lien vers la ligne de devis CPQ initiale (utilisé pour remonter à la source lors d&apos;avenant multiples).
Renseigné si la commission porte sur un devis CPQ.</description>
    <label>[#] Ligne de devis CPQ initiale</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Commissions ([#] Ligne de devis CPQ initiale)</relationshipLabel>
    <relationshipName>Commissions3</relationshipName>
    <type>Lookup</type>
</CustomField>