force-app/main/default/objects/NRV10Commission__c/fields/initialQuote__c.field-meta.xml
<CustomField>
    <fullName>initialQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[#] Devis sales initial</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Commissions ([#] Devis sales initial)</relationshipLabel>
    <relationshipName>Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>