force-app/main/default/objects/NRV10Commission__c/fields/initialQuoteline__c.field-meta.xml
<CustomField>
    <fullName>initialQuoteline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ technique de lien vers la ligne de devis sales initiale (utilisé pour remonter à la source lors d&apos;avenant multiples).
Renseigné si la commission porte sur un devis sales.</description>
    <label>[#] Ligne de devis sales initiale</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Commissions ([#] Ligne de devis sales initiale)</relationshipLabel>
    <relationshipName>Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>