force-app/main/default/objects/NRV10Commission__c/fields/instantDate__c.field-meta.xml
<CustomField>
    <fullName>instantDate__c</fullName>
    <label>Date du cliché</label>
    <type>Date</type>
</CustomField>