force-app/main/default/objects/NRV10Commission__c/fields/orderProduct__c.field-meta.xml
<CustomField>
    <fullName>orderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de commande</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>