force-app/main/default/objects/NRV10Commission__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>