force-app/main/default/objects/NRV10Commission__c/fields/productCode__c.field-meta.xml
<CustomField>
    <fullName>productCode__c</fullName>
    <label>Code produit</label>
    <length>64</length>
    <type>Text</type>
</CustomField>