force-app/main/default/objects/NRV10Commission__c/fields/productCom__c.field-meta.xml
<CustomField>
    <fullName>productCom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit commissionné</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>