force-app/main/default/objects/NRV10Commission__c/fields/productLabel__c.field-meta.xml
<CustomField>
    <fullName>productLabel__c</fullName>
    <label>Libellé produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>