force-app/main/default/objects/NRV10Commission__c/fields/productRate__c.field-meta.xml
<CustomField>
    <fullName>productRate__c</fullName>
    <label>Taux de produit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>