force-app/main/default/objects/NRV10Commission__c/fields/quote__c.field-meta.xml
<CustomField>
    <fullName>quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien vers le devis sales commissionné (non rempli si la commission porte sur un devis CPQ)</description>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>