force-app/main/default/objects/NRV10Commission__c/fields/quoteCPQ__c.field-meta.xml
<CustomField>
    <fullName>quoteCPQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis CPQ</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>