force-app/main/default/objects/NRV10Commission__c/fields/quoteLine__c.field-meta.xml
<CustomField>
    <fullName>quoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien vers la ligne de devis CPQ commissionné (non rempli si la commission porte sur un devis sales)</description>
    <label>Ligne de devis CPQ</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Commissions (Ligne de devis CPQ)</relationshipLabel>
    <relationshipName>Commissions2</relationshipName>
    <type>Lookup</type>
</CustomField>