force-app/main/default/objects/NRV10Commission__c/fields/quoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>quoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien vers la ligne de devis sales commissionné (non rempli si la commission porte sur un devis CPQ)</description>
    <label>Ligne de devis</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>