force-app/main/default/objects/NRV10Commission__c/fields/ratingAmount__c.field-meta.xml
<CustomField>
    <fullName>ratingAmount__c</fullName>
    <label>Montant cotation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>