force-app/main/default/objects/NRV10Commission__c/fields/remuneration__c.field-meta.xml
<CustomField>
    <fullName>remuneration__c</fullName>
    <label>Rémunération (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>