force-app/main/default/objects/NRV10Commission__c/fields/repartPercent__c.field-meta.xml
<CustomField>
    <fullName>repartPercent__c</fullName>
    <label>% Répartition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>