force-app/main/default/objects/NRV10Commission__c/fields/salesRem__c.field-meta.xml
<CustomField>
    <fullName>salesRem__c</fullName>
    <label>Commission vendeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>