force-app/main/default/objects/NRV10Commission__c/fields/sellingPrice__c.field-meta.xml
<CustomField>
    <fullName>sellingPrice__c</fullName>
    <label>Prix de vente ligne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>