force-app/main/default/objects/NRV10Commission__c/fields/sfUser__c.field-meta.xml
<CustomField>
    <fullName>sfUser__c</fullName>
    <formula>user__r.user__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#SF user</label>
    <type>Text</type>
</CustomField>