force-app/main/default/objects/NRV10Commission__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prévisionnelle</fullName>
                <default>true</default>
                <label>Prévisionnelle</label>
            </value>
            <value>
                <fullName>Non commissionnable</fullName>
            </value>
            <value>
                <fullName>Commissionnable</fullName>
            </value>
            <value>
                <fullName>Décommissionnable</fullName>
            </value>
            <value>
                <fullName>Commissionnée</fullName>
            </value>
            <value>
                <fullName>Régularisable</fullName>
            </value>
            <value>
                <fullName>Régularisée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Décommissionnée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>