force-app/main/default/objects/NRV10Commission__c/fields/teamRate__c.field-meta.xml
<CustomField>
    <fullName>teamRate__c</fullName>
    <label>Taux d&apos;équipe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>