force-app/main/default/objects/NRV10Commission__c/fields/totalAmountTTC__c.field-meta.xml
<CustomField>
    <fullName>totalAmountTTC__c</fullName>
    <label>Montant total TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>