force-app/main/default/objects/NRV10Commission__c/fields/unitPrice__c.field-meta.xml
<CustomField>
    <fullName>unitPrice__c</fullName>
    <label>Prix unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>