force-app/main/default/objects/NRV10Commission__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <label>Vendeur</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>