force-app/main/default/objects/NRV10Commission__c/listViews/Commissions_calcul_es_partir_de_CPQ.listView-meta.xml
<ListView>
    <fullName>Commissions_calcul_es_partir_de_CPQ</fullName>
    <columns>NAME</columns>
    <columns>calculationDate__c</columns>
    <columns>comType__c</columns>
    <columns>status__c</columns>
    <columns>productCode__c</columns>
    <columns>sellingPrice__c</columns>
    <columns>productRate__c</columns>
    <columns>ecPercent__c</columns>
    <columns>discountCoefficient__c</columns>
    <columns>remuneration__c</columns>
    <columns>teamRate__c</columns>
    <columns>salesRem__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>quoteCPQ__c</field>
        <operation>equals</operation>
        <value>Q-00134</value>
    </filters>
    <label>Commissions Q-00134</label>
</ListView>