force-app/main/default/objects/NRV10Commission__c/listViews/Commissions_devis_CPQ.listView-meta.xml
<ListView>
    <fullName>Commissions_devis_CPQ</fullName>
    <columns>quote__c</columns>
    <columns>NAME</columns>
    <columns>calculationDate__c</columns>
    <columns>instantDate__c</columns>
    <columns>comType__c</columns>
    <columns>user__c</columns>
    <columns>status__c</columns>
    <columns>productCode__c</columns>
    <columns>sellingPrice__c</columns>
    <columns>productRate__c</columns>
    <columns>ecPercent__c</columns>
    <columns>discountCoefficient__c</columns>
    <columns>remuneration__c</columns>
    <columns>teamRate__c</columns>
    <columns>salesRem__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>quoteCPQ__c</field>
        <operation>equals</operation>
        <value>Q-00195</value>
    </filters>
    <label>Commissions devis CPQ</label>
</ListView>