force-app/main/default/objects/NRV10Commission__c/listViews/Commissions_devis_Sales.listView-meta.xml
<ListView>
    <fullName>Commissions_devis_Sales</fullName>
    <columns>quote__c</columns>
    <columns>NAME</columns>
    <columns>calculationDate__c</columns>
    <columns>comType__c</columns>
    <columns>user__c</columns>
    <columns>status__c</columns>
    <columns>productCode__c</columns>
    <columns>sellingPrice__c</columns>
    <columns>productRate__c</columns>
    <columns>ecPercent__c</columns>
    <columns>discountCoefficient__c</columns>
    <columns>remuneration__c</columns>
    <columns>teamRate__c</columns>
    <columns>salesRem__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>quote__c</field>
        <operation>equals</operation>
        <value>Avenant sur Commande-CO/2022/00001466-20/10/2022</value>
    </filters>
    <label>Commissions devis Sales</label>
</ListView>